--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
   <div class="grid-container">
     <div class="nation" id="nation1">
       <div class="overlay">
-        <span>Nation 1</span>
+        <span>USA</span>
       </div>
     </div>
     <div class="nation" id="nation2">
       <div class="overlay">
-        <span>Nation 2</span>
+        <span>SWITZERLAND</span>
       </div>
     </div>
     <div class="nation" id="nation3">
       <div class="overlay">
-        <span>Nation 3</span>
+        <span>JAPAN</span>
       </div>
     </div>
     <div class="nation" id="nation4">
       <div class="overlay">
-        <span>Nation 4</span>
+        <span>BALI</span>
       </div>
     </div>
   </div>
