--- a/main page/main.html
+++ b/main page/main.html
@@ -11,7 +11,7 @@
 </head>
 <body>
         <video class="video-background" autoplay muted loop>
-            <source src="/bg.mp4" type="video/mp4">
+            <source src="/travel-blog/main page/bg.mp4" type="video/mp4">
         </video>
         <div class="text">
             <h1>TRAVELING TIME</h1>
