--- a/main page/main.html
+++ b/main page/main.html
@@ -11,7 +11,7 @@
 </head>
 <body>
         <video class="video-background" autoplay muted loop>
-            <source src="/travel-blog/main page/bg.mp4" type="video/mp4">
+            <source src="bg.mp4" type="video/mp4">
         </video>
         <div class="text">
             <h1>TRAVELING TIME</h1>
@@ -20,10 +20,7 @@
             <button class="blob-btn">
                 <span class="blob-btn__inner">Click Me</span>
                 <span class="blob-btn__blobs">
-                    <span class="blob-btn__blob"></span>
-                    <span class="blob-btn__blob"></span>
-                    <span class="blob-btn__blob"></span>
-                    <span class="blob-btn__blob"></span>
+                    
                 </span>
             </button>
             <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
